force-app/main/default/objects/NotificationTemplate__c/NotificationTemplate__c.object-meta.xml
<CustomObject>
    <label>Notification Template</label>
    <listViews>
        <fullName>RecentlyViewed</fullName>
        <columns>Template_Key__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>Bell_Body__c</columns>
        <filterScope>RecentlyViewed</filterScope>
        <label>Recently Viewed</label>
    </listViews>
    <nameField>
        <label>Notification Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>