force-app/main/default/objects/NotificationTemplate__c/fields/Bell_Body__c.field-meta.xml
<CustomField>
    <fullName>Bell_Body__c</fullName>
    <label>Bell Body</label>
    <description>Plain text body for bell (in-app) notifications. Max 255 characters — Salesforce Custom Notifications API limit. Supports {{{token}}} replacement. Used by BellChannelHandler at runtime.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>