force-app/main/default/objects/NotificationTemplate__c/fields/Body_Is_HTML__c.field-meta.xml
<CustomField>
    <fullName>Body_Is_HTML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Is HTML</label>
    <type>Checkbox</type>
</CustomField>