force-app/main/default/objects/NotificationTemplate__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <label>Email Template Name</label>
    <description>Developer Name of the Salesforce Email Template to use as the email body. When set, the code fetches the template body from the org Email Template instead of the Body field. Our {{{token}}} merge tokens are still resolved on top of the fetched body.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>