force-app/main/default/objects/NotificationTemplate__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <isActive>true</isActive>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <isActive>true</isActive>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <isActive>true</isActive>
                <label>French</label>
            </value>
            <value>
                <fullName>de</fullName>
                <isActive>true</isActive>
                <label>German</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <isActive>true</isActive>
                <label>Portuguese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>