force-app/main/default/objects/NotificationTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Template_Key__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Email_Template_Name__c</columns>
    <columns>Body_Is_HTML__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>